# simple-flops

./: flops-run.py  flops.cpp  meson.build
subprojects/: argparse.wrap  fmt.wrap
